# rust-huffman-tree

./: Cargo.toml  README.md  data.txt
src/: code.rs  io.rs  main.rs  model.rs  sort.rs  tree.rs
