[package]
name = "arghera"
version = "0.1.0"
authors = ["dannowilby <dywilby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbit = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"